// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dashboard /> Dashboard ready tab=ADMIN_TAB matches snapshot 1`] = `
<Memo(Dashboard)
  setTab={[Function]}
  tab="adminTab"
>
  <Memo(TabSelector)
    setTab={[Function]}
    tab="adminTab"
  >
    <WithStyles(ForwardRef(Grid))
      className="choicesContainer"
      container={true}
    >
      <ForwardRef(Grid)
        className="choicesContainer"
        classes={
          Object {
            "align-content-xs-center": "MuiGrid-align-content-xs-center",
            "align-content-xs-flex-end": "MuiGrid-align-content-xs-flex-end",
            "align-content-xs-flex-start": "MuiGrid-align-content-xs-flex-start",
            "align-content-xs-space-around": "MuiGrid-align-content-xs-space-around",
            "align-content-xs-space-between": "MuiGrid-align-content-xs-space-between",
            "align-items-xs-baseline": "MuiGrid-align-items-xs-baseline",
            "align-items-xs-center": "MuiGrid-align-items-xs-center",
            "align-items-xs-flex-end": "MuiGrid-align-items-xs-flex-end",
            "align-items-xs-flex-start": "MuiGrid-align-items-xs-flex-start",
            "container": "MuiGrid-container",
            "direction-xs-column": "MuiGrid-direction-xs-column",
            "direction-xs-column-reverse": "MuiGrid-direction-xs-column-reverse",
            "direction-xs-row-reverse": "MuiGrid-direction-xs-row-reverse",
            "grid-lg-1": "MuiGrid-grid-lg-1",
            "grid-lg-10": "MuiGrid-grid-lg-10",
            "grid-lg-11": "MuiGrid-grid-lg-11",
            "grid-lg-12": "MuiGrid-grid-lg-12",
            "grid-lg-2": "MuiGrid-grid-lg-2",
            "grid-lg-3": "MuiGrid-grid-lg-3",
            "grid-lg-4": "MuiGrid-grid-lg-4",
            "grid-lg-5": "MuiGrid-grid-lg-5",
            "grid-lg-6": "MuiGrid-grid-lg-6",
            "grid-lg-7": "MuiGrid-grid-lg-7",
            "grid-lg-8": "MuiGrid-grid-lg-8",
            "grid-lg-9": "MuiGrid-grid-lg-9",
            "grid-lg-auto": "MuiGrid-grid-lg-auto",
            "grid-lg-true": "MuiGrid-grid-lg-true",
            "grid-md-1": "MuiGrid-grid-md-1",
            "grid-md-10": "MuiGrid-grid-md-10",
            "grid-md-11": "MuiGrid-grid-md-11",
            "grid-md-12": "MuiGrid-grid-md-12",
            "grid-md-2": "MuiGrid-grid-md-2",
            "grid-md-3": "MuiGrid-grid-md-3",
            "grid-md-4": "MuiGrid-grid-md-4",
            "grid-md-5": "MuiGrid-grid-md-5",
            "grid-md-6": "MuiGrid-grid-md-6",
            "grid-md-7": "MuiGrid-grid-md-7",
            "grid-md-8": "MuiGrid-grid-md-8",
            "grid-md-9": "MuiGrid-grid-md-9",
            "grid-md-auto": "MuiGrid-grid-md-auto",
            "grid-md-true": "MuiGrid-grid-md-true",
            "grid-sm-1": "MuiGrid-grid-sm-1",
            "grid-sm-10": "MuiGrid-grid-sm-10",
            "grid-sm-11": "MuiGrid-grid-sm-11",
            "grid-sm-12": "MuiGrid-grid-sm-12",
            "grid-sm-2": "MuiGrid-grid-sm-2",
            "grid-sm-3": "MuiGrid-grid-sm-3",
            "grid-sm-4": "MuiGrid-grid-sm-4",
            "grid-sm-5": "MuiGrid-grid-sm-5",
            "grid-sm-6": "MuiGrid-grid-sm-6",
            "grid-sm-7": "MuiGrid-grid-sm-7",
            "grid-sm-8": "MuiGrid-grid-sm-8",
            "grid-sm-9": "MuiGrid-grid-sm-9",
            "grid-sm-auto": "MuiGrid-grid-sm-auto",
            "grid-sm-true": "MuiGrid-grid-sm-true",
            "grid-xl-1": "MuiGrid-grid-xl-1",
            "grid-xl-10": "MuiGrid-grid-xl-10",
            "grid-xl-11": "MuiGrid-grid-xl-11",
            "grid-xl-12": "MuiGrid-grid-xl-12",
            "grid-xl-2": "MuiGrid-grid-xl-2",
            "grid-xl-3": "MuiGrid-grid-xl-3",
            "grid-xl-4": "MuiGrid-grid-xl-4",
            "grid-xl-5": "MuiGrid-grid-xl-5",
            "grid-xl-6": "MuiGrid-grid-xl-6",
            "grid-xl-7": "MuiGrid-grid-xl-7",
            "grid-xl-8": "MuiGrid-grid-xl-8",
            "grid-xl-9": "MuiGrid-grid-xl-9",
            "grid-xl-auto": "MuiGrid-grid-xl-auto",
            "grid-xl-true": "MuiGrid-grid-xl-true",
            "grid-xs-1": "MuiGrid-grid-xs-1",
            "grid-xs-10": "MuiGrid-grid-xs-10",
            "grid-xs-11": "MuiGrid-grid-xs-11",
            "grid-xs-12": "MuiGrid-grid-xs-12",
            "grid-xs-2": "MuiGrid-grid-xs-2",
            "grid-xs-3": "MuiGrid-grid-xs-3",
            "grid-xs-4": "MuiGrid-grid-xs-4",
            "grid-xs-5": "MuiGrid-grid-xs-5",
            "grid-xs-6": "MuiGrid-grid-xs-6",
            "grid-xs-7": "MuiGrid-grid-xs-7",
            "grid-xs-8": "MuiGrid-grid-xs-8",
            "grid-xs-9": "MuiGrid-grid-xs-9",
            "grid-xs-auto": "MuiGrid-grid-xs-auto",
            "grid-xs-true": "MuiGrid-grid-xs-true",
            "item": "MuiGrid-item",
            "justify-content-xs-center": "MuiGrid-justify-content-xs-center",
            "justify-content-xs-flex-end": "MuiGrid-justify-content-xs-flex-end",
            "justify-content-xs-space-around": "MuiGrid-justify-content-xs-space-around",
            "justify-content-xs-space-between": "MuiGrid-justify-content-xs-space-between",
            "justify-content-xs-space-evenly": "MuiGrid-justify-content-xs-space-evenly",
            "root": "MuiGrid-root",
            "spacing-xs-1": "MuiGrid-spacing-xs-1",
            "spacing-xs-10": "MuiGrid-spacing-xs-10",
            "spacing-xs-2": "MuiGrid-spacing-xs-2",
            "spacing-xs-3": "MuiGrid-spacing-xs-3",
            "spacing-xs-4": "MuiGrid-spacing-xs-4",
            "spacing-xs-5": "MuiGrid-spacing-xs-5",
            "spacing-xs-6": "MuiGrid-spacing-xs-6",
            "spacing-xs-7": "MuiGrid-spacing-xs-7",
            "spacing-xs-8": "MuiGrid-spacing-xs-8",
            "spacing-xs-9": "MuiGrid-spacing-xs-9",
            "wrap-xs-nowrap": "MuiGrid-wrap-xs-nowrap",
            "wrap-xs-wrap-reverse": "MuiGrid-wrap-xs-wrap-reverse",
            "zeroMinWidth": "MuiGrid-zeroMinWidth",
          }
        }
        container={true}
      >
        <div
          className="MuiGrid-root choicesContainer MuiGrid-container"
        >
          <Styled(MuiBox)
            className="choiceBox"
            key="accountTab"
            onClick={[Function]}
            px={3}
            width="200px"
          >
            <div
              className="MuiBox-root MuiBox-root-25 choiceBox"
              onClick={[Function]}
            >
              <WithStyles(ForwardRef(Typography))
                variant="subtitle1"
              >
                <ForwardRef(Typography)
                  classes={
                    Object {
                      "alignCenter": "MuiTypography-alignCenter",
                      "alignJustify": "MuiTypography-alignJustify",
                      "alignLeft": "MuiTypography-alignLeft",
                      "alignRight": "MuiTypography-alignRight",
                      "body1": "MuiTypography-body1",
                      "body2": "MuiTypography-body2",
                      "button": "MuiTypography-button",
                      "caption": "MuiTypography-caption",
                      "colorError": "MuiTypography-colorError",
                      "colorInherit": "MuiTypography-colorInherit",
                      "colorPrimary": "MuiTypography-colorPrimary",
                      "colorSecondary": "MuiTypography-colorSecondary",
                      "colorTextPrimary": "MuiTypography-colorTextPrimary",
                      "colorTextSecondary": "MuiTypography-colorTextSecondary",
                      "displayBlock": "MuiTypography-displayBlock",
                      "displayInline": "MuiTypography-displayInline",
                      "gutterBottom": "MuiTypography-gutterBottom",
                      "h1": "MuiTypography-h1",
                      "h2": "MuiTypography-h2",
                      "h3": "MuiTypography-h3",
                      "h4": "MuiTypography-h4",
                      "h5": "MuiTypography-h5",
                      "h6": "MuiTypography-h6",
                      "noWrap": "MuiTypography-noWrap",
                      "overline": "MuiTypography-overline",
                      "paragraph": "MuiTypography-paragraph",
                      "root": "MuiTypography-root",
                      "srOnly": "MuiTypography-srOnly",
                      "subtitle1": "MuiTypography-subtitle1",
                      "subtitle2": "MuiTypography-subtitle2",
                    }
                  }
                  variant="subtitle1"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-subtitle1"
                  >
                    Accounts
                  </h6>
                </ForwardRef(Typography)>
              </WithStyles(ForwardRef(Typography))>
            </div>
          </Styled(MuiBox)>
          <Styled(MuiBox)
            className="choiceBox"
            key="enodeTab"
            onClick={[Function]}
            px={3}
            width="200px"
          >
            <div
              className="MuiBox-root MuiBox-root-26 choiceBox"
              onClick={[Function]}
            >
              <WithStyles(ForwardRef(Typography))
                variant="subtitle1"
              >
                <ForwardRef(Typography)
                  classes={
                    Object {
                      "alignCenter": "MuiTypography-alignCenter",
                      "alignJustify": "MuiTypography-alignJustify",
                      "alignLeft": "MuiTypography-alignLeft",
                      "alignRight": "MuiTypography-alignRight",
                      "body1": "MuiTypography-body1",
                      "body2": "MuiTypography-body2",
                      "button": "MuiTypography-button",
                      "caption": "MuiTypography-caption",
                      "colorError": "MuiTypography-colorError",
                      "colorInherit": "MuiTypography-colorInherit",
                      "colorPrimary": "MuiTypography-colorPrimary",
                      "colorSecondary": "MuiTypography-colorSecondary",
                      "colorTextPrimary": "MuiTypography-colorTextPrimary",
                      "colorTextSecondary": "MuiTypography-colorTextSecondary",
                      "displayBlock": "MuiTypography-displayBlock",
                      "displayInline": "MuiTypography-displayInline",
                      "gutterBottom": "MuiTypography-gutterBottom",
                      "h1": "MuiTypography-h1",
                      "h2": "MuiTypography-h2",
                      "h3": "MuiTypography-h3",
                      "h4": "MuiTypography-h4",
                      "h5": "MuiTypography-h5",
                      "h6": "MuiTypography-h6",
                      "noWrap": "MuiTypography-noWrap",
                      "overline": "MuiTypography-overline",
                      "paragraph": "MuiTypography-paragraph",
                      "root": "MuiTypography-root",
                      "srOnly": "MuiTypography-srOnly",
                      "subtitle1": "MuiTypography-subtitle1",
                      "subtitle2": "MuiTypography-subtitle2",
                    }
                  }
                  variant="subtitle1"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-subtitle1"
                  >
                    Nodes
                  </h6>
                </ForwardRef(Typography)>
              </WithStyles(ForwardRef(Typography))>
            </div>
          </Styled(MuiBox)>
          <Styled(MuiBox)
            className="selected choiceBox"
            key="adminTab"
            onClick={[Function]}
            px={3}
            width="200px"
          >
            <div
              className="MuiBox-root MuiBox-root-27 selected choiceBox"
              onClick={[Function]}
            >
              <WithStyles(ForwardRef(Typography))
                variant="subtitle1"
              >
                <ForwardRef(Typography)
                  classes={
                    Object {
                      "alignCenter": "MuiTypography-alignCenter",
                      "alignJustify": "MuiTypography-alignJustify",
                      "alignLeft": "MuiTypography-alignLeft",
                      "alignRight": "MuiTypography-alignRight",
                      "body1": "MuiTypography-body1",
                      "body2": "MuiTypography-body2",
                      "button": "MuiTypography-button",
                      "caption": "MuiTypography-caption",
                      "colorError": "MuiTypography-colorError",
                      "colorInherit": "MuiTypography-colorInherit",
                      "colorPrimary": "MuiTypography-colorPrimary",
                      "colorSecondary": "MuiTypography-colorSecondary",
                      "colorTextPrimary": "MuiTypography-colorTextPrimary",
                      "colorTextSecondary": "MuiTypography-colorTextSecondary",
                      "displayBlock": "MuiTypography-displayBlock",
                      "displayInline": "MuiTypography-displayInline",
                      "gutterBottom": "MuiTypography-gutterBottom",
                      "h1": "MuiTypography-h1",
                      "h2": "MuiTypography-h2",
                      "h3": "MuiTypography-h3",
                      "h4": "MuiTypography-h4",
                      "h5": "MuiTypography-h5",
                      "h6": "MuiTypography-h6",
                      "noWrap": "MuiTypography-noWrap",
                      "overline": "MuiTypography-overline",
                      "paragraph": "MuiTypography-paragraph",
                      "root": "MuiTypography-root",
                      "srOnly": "MuiTypography-srOnly",
                      "subtitle1": "MuiTypography-subtitle1",
                      "subtitle2": "MuiTypography-subtitle2",
                    }
                  }
                  variant="subtitle1"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-subtitle1"
                  >
                    Admins
                  </h6>
                </ForwardRef(Typography)>
              </WithStyles(ForwardRef(Typography))>
            </div>
          </Styled(MuiBox)>
        </div>
      </ForwardRef(Grid)>
    </WithStyles(ForwardRef(Grid))>
  </Memo(TabSelector)>
  <ToastProvider>
    <ToastsContainer>
      <Memo(Toasts)
        closeToast={[Function]}
        toasts={Array []}
      >
        <WithStyles(ForwardRef(Grid))>
          <ForwardRef(Grid)
            classes={
              Object {
                "align-content-xs-center": "MuiGrid-align-content-xs-center",
                "align-content-xs-flex-end": "MuiGrid-align-content-xs-flex-end",
                "align-content-xs-flex-start": "MuiGrid-align-content-xs-flex-start",
                "align-content-xs-space-around": "MuiGrid-align-content-xs-space-around",
                "align-content-xs-space-between": "MuiGrid-align-content-xs-space-between",
                "align-items-xs-baseline": "MuiGrid-align-items-xs-baseline",
                "align-items-xs-center": "MuiGrid-align-items-xs-center",
                "align-items-xs-flex-end": "MuiGrid-align-items-xs-flex-end",
                "align-items-xs-flex-start": "MuiGrid-align-items-xs-flex-start",
                "container": "MuiGrid-container",
                "direction-xs-column": "MuiGrid-direction-xs-column",
                "direction-xs-column-reverse": "MuiGrid-direction-xs-column-reverse",
                "direction-xs-row-reverse": "MuiGrid-direction-xs-row-reverse",
                "grid-lg-1": "MuiGrid-grid-lg-1",
                "grid-lg-10": "MuiGrid-grid-lg-10",
                "grid-lg-11": "MuiGrid-grid-lg-11",
                "grid-lg-12": "MuiGrid-grid-lg-12",
                "grid-lg-2": "MuiGrid-grid-lg-2",
                "grid-lg-3": "MuiGrid-grid-lg-3",
                "grid-lg-4": "MuiGrid-grid-lg-4",
                "grid-lg-5": "MuiGrid-grid-lg-5",
                "grid-lg-6": "MuiGrid-grid-lg-6",
                "grid-lg-7": "MuiGrid-grid-lg-7",
                "grid-lg-8": "MuiGrid-grid-lg-8",
                "grid-lg-9": "MuiGrid-grid-lg-9",
                "grid-lg-auto": "MuiGrid-grid-lg-auto",
                "grid-lg-true": "MuiGrid-grid-lg-true",
                "grid-md-1": "MuiGrid-grid-md-1",
                "grid-md-10": "MuiGrid-grid-md-10",
                "grid-md-11": "MuiGrid-grid-md-11",
                "grid-md-12": "MuiGrid-grid-md-12",
                "grid-md-2": "MuiGrid-grid-md-2",
                "grid-md-3": "MuiGrid-grid-md-3",
                "grid-md-4": "MuiGrid-grid-md-4",
                "grid-md-5": "MuiGrid-grid-md-5",
                "grid-md-6": "MuiGrid-grid-md-6",
                "grid-md-7": "MuiGrid-grid-md-7",
                "grid-md-8": "MuiGrid-grid-md-8",
                "grid-md-9": "MuiGrid-grid-md-9",
                "grid-md-auto": "MuiGrid-grid-md-auto",
                "grid-md-true": "MuiGrid-grid-md-true",
                "grid-sm-1": "MuiGrid-grid-sm-1",
                "grid-sm-10": "MuiGrid-grid-sm-10",
                "grid-sm-11": "MuiGrid-grid-sm-11",
                "grid-sm-12": "MuiGrid-grid-sm-12",
                "grid-sm-2": "MuiGrid-grid-sm-2",
                "grid-sm-3": "MuiGrid-grid-sm-3",
                "grid-sm-4": "MuiGrid-grid-sm-4",
                "grid-sm-5": "MuiGrid-grid-sm-5",
                "grid-sm-6": "MuiGrid-grid-sm-6",
                "grid-sm-7": "MuiGrid-grid-sm-7",
                "grid-sm-8": "MuiGrid-grid-sm-8",
                "grid-sm-9": "MuiGrid-grid-sm-9",
                "grid-sm-auto": "MuiGrid-grid-sm-auto",
                "grid-sm-true": "MuiGrid-grid-sm-true",
                "grid-xl-1": "MuiGrid-grid-xl-1",
                "grid-xl-10": "MuiGrid-grid-xl-10",
                "grid-xl-11": "MuiGrid-grid-xl-11",
                "grid-xl-12": "MuiGrid-grid-xl-12",
                "grid-xl-2": "MuiGrid-grid-xl-2",
                "grid-xl-3": "MuiGrid-grid-xl-3",
                "grid-xl-4": "MuiGrid-grid-xl-4",
                "grid-xl-5": "MuiGrid-grid-xl-5",
                "grid-xl-6": "MuiGrid-grid-xl-6",
                "grid-xl-7": "MuiGrid-grid-xl-7",
                "grid-xl-8": "MuiGrid-grid-xl-8",
                "grid-xl-9": "MuiGrid-grid-xl-9",
                "grid-xl-auto": "MuiGrid-grid-xl-auto",
                "grid-xl-true": "MuiGrid-grid-xl-true",
                "grid-xs-1": "MuiGrid-grid-xs-1",
                "grid-xs-10": "MuiGrid-grid-xs-10",
                "grid-xs-11": "MuiGrid-grid-xs-11",
                "grid-xs-12": "MuiGrid-grid-xs-12",
                "grid-xs-2": "MuiGrid-grid-xs-2",
                "grid-xs-3": "MuiGrid-grid-xs-3",
                "grid-xs-4": "MuiGrid-grid-xs-4",
                "grid-xs-5": "MuiGrid-grid-xs-5",
                "grid-xs-6": "MuiGrid-grid-xs-6",
                "grid-xs-7": "MuiGrid-grid-xs-7",
                "grid-xs-8": "MuiGrid-grid-xs-8",
                "grid-xs-9": "MuiGrid-grid-xs-9",
                "grid-xs-auto": "MuiGrid-grid-xs-auto",
                "grid-xs-true": "MuiGrid-grid-xs-true",
                "item": "MuiGrid-item",
                "justify-content-xs-center": "MuiGrid-justify-content-xs-center",
                "justify-content-xs-flex-end": "MuiGrid-justify-content-xs-flex-end",
                "justify-content-xs-space-around": "MuiGrid-justify-content-xs-space-around",
                "justify-content-xs-space-between": "MuiGrid-justify-content-xs-space-between",
                "justify-content-xs-space-evenly": "MuiGrid-justify-content-xs-space-evenly",
                "root": "MuiGrid-root",
                "spacing-xs-1": "MuiGrid-spacing-xs-1",
                "spacing-xs-10": "MuiGrid-spacing-xs-10",
                "spacing-xs-2": "MuiGrid-spacing-xs-2",
                "spacing-xs-3": "MuiGrid-spacing-xs-3",
                "spacing-xs-4": "MuiGrid-spacing-xs-4",
                "spacing-xs-5": "MuiGrid-spacing-xs-5",
                "spacing-xs-6": "MuiGrid-spacing-xs-6",
                "spacing-xs-7": "MuiGrid-spacing-xs-7",
                "spacing-xs-8": "MuiGrid-spacing-xs-8",
                "spacing-xs-9": "MuiGrid-spacing-xs-9",
                "wrap-xs-nowrap": "MuiGrid-wrap-xs-nowrap",
                "wrap-xs-wrap-reverse": "MuiGrid-wrap-xs-wrap-reverse",
                "zeroMinWidth": "MuiGrid-zeroMinWidth",
              }
            }
          >
            <div
              className="MuiGrid-root"
            />
          </ForwardRef(Grid)>
        </WithStyles(ForwardRef(Grid))>
      </Memo(Toasts)>
    </ToastsContainer>
    <mockConstructor>
      <div>
        <mockConstructor>
          <div>
            <AccountTabContainer
              isOpen={false}
            >
              <div />
            </AccountTabContainer>
          </div>
        </mockConstructor>
        <AdminTabContainer
          isOpen={true}
        >
          <NoContract
            tabName="Admin"
          >
            <Styled(MuiBox)>
              <div
                className="MuiBox-root MuiBox-root-28"
              >
                <WithStyles(ForwardRef(Grid))
                  alignItems="center"
                  container={true}
                >
                  <ForwardRef(Grid)
                    alignItems="center"
                    classes={
                      Object {
                        "align-content-xs-center": "MuiGrid-align-content-xs-center",
                        "align-content-xs-flex-end": "MuiGrid-align-content-xs-flex-end",
                        "align-content-xs-flex-start": "MuiGrid-align-content-xs-flex-start",
                        "align-content-xs-space-around": "MuiGrid-align-content-xs-space-around",
                        "align-content-xs-space-between": "MuiGrid-align-content-xs-space-between",
                        "align-items-xs-baseline": "MuiGrid-align-items-xs-baseline",
                        "align-items-xs-center": "MuiGrid-align-items-xs-center",
                        "align-items-xs-flex-end": "MuiGrid-align-items-xs-flex-end",
                        "align-items-xs-flex-start": "MuiGrid-align-items-xs-flex-start",
                        "container": "MuiGrid-container",
                        "direction-xs-column": "MuiGrid-direction-xs-column",
                        "direction-xs-column-reverse": "MuiGrid-direction-xs-column-reverse",
                        "direction-xs-row-reverse": "MuiGrid-direction-xs-row-reverse",
                        "grid-lg-1": "MuiGrid-grid-lg-1",
                        "grid-lg-10": "MuiGrid-grid-lg-10",
                        "grid-lg-11": "MuiGrid-grid-lg-11",
                        "grid-lg-12": "MuiGrid-grid-lg-12",
                        "grid-lg-2": "MuiGrid-grid-lg-2",
                        "grid-lg-3": "MuiGrid-grid-lg-3",
                        "grid-lg-4": "MuiGrid-grid-lg-4",
                        "grid-lg-5": "MuiGrid-grid-lg-5",
                        "grid-lg-6": "MuiGrid-grid-lg-6",
                        "grid-lg-7": "MuiGrid-grid-lg-7",
                        "grid-lg-8": "MuiGrid-grid-lg-8",
                        "grid-lg-9": "MuiGrid-grid-lg-9",
                        "grid-lg-auto": "MuiGrid-grid-lg-auto",
                        "grid-lg-true": "MuiGrid-grid-lg-true",
                        "grid-md-1": "MuiGrid-grid-md-1",
                        "grid-md-10": "MuiGrid-grid-md-10",
                        "grid-md-11": "MuiGrid-grid-md-11",
                        "grid-md-12": "MuiGrid-grid-md-12",
                        "grid-md-2": "MuiGrid-grid-md-2",
                        "grid-md-3": "MuiGrid-grid-md-3",
                        "grid-md-4": "MuiGrid-grid-md-4",
                        "grid-md-5": "MuiGrid-grid-md-5",
                        "grid-md-6": "MuiGrid-grid-md-6",
                        "grid-md-7": "MuiGrid-grid-md-7",
                        "grid-md-8": "MuiGrid-grid-md-8",
                        "grid-md-9": "MuiGrid-grid-md-9",
                        "grid-md-auto": "MuiGrid-grid-md-auto",
                        "grid-md-true": "MuiGrid-grid-md-true",
                        "grid-sm-1": "MuiGrid-grid-sm-1",
                        "grid-sm-10": "MuiGrid-grid-sm-10",
                        "grid-sm-11": "MuiGrid-grid-sm-11",
                        "grid-sm-12": "MuiGrid-grid-sm-12",
                        "grid-sm-2": "MuiGrid-grid-sm-2",
                        "grid-sm-3": "MuiGrid-grid-sm-3",
                        "grid-sm-4": "MuiGrid-grid-sm-4",
                        "grid-sm-5": "MuiGrid-grid-sm-5",
                        "grid-sm-6": "MuiGrid-grid-sm-6",
                        "grid-sm-7": "MuiGrid-grid-sm-7",
                        "grid-sm-8": "MuiGrid-grid-sm-8",
                        "grid-sm-9": "MuiGrid-grid-sm-9",
                        "grid-sm-auto": "MuiGrid-grid-sm-auto",
                        "grid-sm-true": "MuiGrid-grid-sm-true",
                        "grid-xl-1": "MuiGrid-grid-xl-1",
                        "grid-xl-10": "MuiGrid-grid-xl-10",
                        "grid-xl-11": "MuiGrid-grid-xl-11",
                        "grid-xl-12": "MuiGrid-grid-xl-12",
                        "grid-xl-2": "MuiGrid-grid-xl-2",
                        "grid-xl-3": "MuiGrid-grid-xl-3",
                        "grid-xl-4": "MuiGrid-grid-xl-4",
                        "grid-xl-5": "MuiGrid-grid-xl-5",
                        "grid-xl-6": "MuiGrid-grid-xl-6",
                        "grid-xl-7": "MuiGrid-grid-xl-7",
                        "grid-xl-8": "MuiGrid-grid-xl-8",
                        "grid-xl-9": "MuiGrid-grid-xl-9",
                        "grid-xl-auto": "MuiGrid-grid-xl-auto",
                        "grid-xl-true": "MuiGrid-grid-xl-true",
                        "grid-xs-1": "MuiGrid-grid-xs-1",
                        "grid-xs-10": "MuiGrid-grid-xs-10",
                        "grid-xs-11": "MuiGrid-grid-xs-11",
                        "grid-xs-12": "MuiGrid-grid-xs-12",
                        "grid-xs-2": "MuiGrid-grid-xs-2",
                        "grid-xs-3": "MuiGrid-grid-xs-3",
                        "grid-xs-4": "MuiGrid-grid-xs-4",
                        "grid-xs-5": "MuiGrid-grid-xs-5",
                        "grid-xs-6": "MuiGrid-grid-xs-6",
                        "grid-xs-7": "MuiGrid-grid-xs-7",
                        "grid-xs-8": "MuiGrid-grid-xs-8",
                        "grid-xs-9": "MuiGrid-grid-xs-9",
                        "grid-xs-auto": "MuiGrid-grid-xs-auto",
                        "grid-xs-true": "MuiGrid-grid-xs-true",
                        "item": "MuiGrid-item",
                        "justify-content-xs-center": "MuiGrid-justify-content-xs-center",
                        "justify-content-xs-flex-end": "MuiGrid-justify-content-xs-flex-end",
                        "justify-content-xs-space-around": "MuiGrid-justify-content-xs-space-around",
                        "justify-content-xs-space-between": "MuiGrid-justify-content-xs-space-between",
                        "justify-content-xs-space-evenly": "MuiGrid-justify-content-xs-space-evenly",
                        "root": "MuiGrid-root",
                        "spacing-xs-1": "MuiGrid-spacing-xs-1",
                        "spacing-xs-10": "MuiGrid-spacing-xs-10",
                        "spacing-xs-2": "MuiGrid-spacing-xs-2",
                        "spacing-xs-3": "MuiGrid-spacing-xs-3",
                        "spacing-xs-4": "MuiGrid-spacing-xs-4",
                        "spacing-xs-5": "MuiGrid-spacing-xs-5",
                        "spacing-xs-6": "MuiGrid-spacing-xs-6",
                        "spacing-xs-7": "MuiGrid-spacing-xs-7",
                        "spacing-xs-8": "MuiGrid-spacing-xs-8",
                        "spacing-xs-9": "MuiGrid-spacing-xs-9",
                        "wrap-xs-nowrap": "MuiGrid-wrap-xs-nowrap",
                        "wrap-xs-wrap-reverse": "MuiGrid-wrap-xs-wrap-reverse",
                        "zeroMinWidth": "MuiGrid-zeroMinWidth",
                      }
                    }
                    container={true}
                  >
                    <div
                      className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
                    >
                      <ForwardRef(WarningIcon)>
                        <WithStyles(ForwardRef(SvgIcon))>
                          <ForwardRef(SvgIcon)
                            classes={
                              Object {
                                "colorAction": "MuiSvgIcon-colorAction",
                                "colorDisabled": "MuiSvgIcon-colorDisabled",
                                "colorError": "MuiSvgIcon-colorError",
                                "colorPrimary": "MuiSvgIcon-colorPrimary",
                                "colorSecondary": "MuiSvgIcon-colorSecondary",
                                "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                "root": "MuiSvgIcon-root",
                              }
                            }
                          >
                            <svg
                              aria-hidden={true}
                              className="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                              />
                            </svg>
                          </ForwardRef(SvgIcon)>
                        </WithStyles(ForwardRef(SvgIcon))>
                      </ForwardRef(WarningIcon)>
                      <WithStyles(ForwardRef(Typography))
                        color="error"
                        variant="body1"
                      >
                        <ForwardRef(Typography)
                          classes={
                            Object {
                              "alignCenter": "MuiTypography-alignCenter",
                              "alignJustify": "MuiTypography-alignJustify",
                              "alignLeft": "MuiTypography-alignLeft",
                              "alignRight": "MuiTypography-alignRight",
                              "body1": "MuiTypography-body1",
                              "body2": "MuiTypography-body2",
                              "button": "MuiTypography-button",
                              "caption": "MuiTypography-caption",
                              "colorError": "MuiTypography-colorError",
                              "colorInherit": "MuiTypography-colorInherit",
                              "colorPrimary": "MuiTypography-colorPrimary",
                              "colorSecondary": "MuiTypography-colorSecondary",
                              "colorTextPrimary": "MuiTypography-colorTextPrimary",
                              "colorTextSecondary": "MuiTypography-colorTextSecondary",
                              "displayBlock": "MuiTypography-displayBlock",
                              "displayInline": "MuiTypography-displayInline",
                              "gutterBottom": "MuiTypography-gutterBottom",
                              "h1": "MuiTypography-h1",
                              "h2": "MuiTypography-h2",
                              "h3": "MuiTypography-h3",
                              "h4": "MuiTypography-h4",
                              "h5": "MuiTypography-h5",
                              "h6": "MuiTypography-h6",
                              "noWrap": "MuiTypography-noWrap",
                              "overline": "MuiTypography-overline",
                              "paragraph": "MuiTypography-paragraph",
                              "root": "MuiTypography-root",
                              "srOnly": "MuiTypography-srOnly",
                              "subtitle1": "MuiTypography-subtitle1",
                              "subtitle2": "MuiTypography-subtitle2",
                            }
                          }
                          color="error"
                          variant="body1"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1 MuiTypography-colorError"
                          >
                            Unable to locate 
                            Admin
                             contract. Please review the Dapp configuration and confirm that the contract is correctly deployed.
                          </p>
                        </ForwardRef(Typography)>
                      </WithStyles(ForwardRef(Typography))>
                    </div>
                  </ForwardRef(Grid)>
                </WithStyles(ForwardRef(Grid))>
              </div>
            </Styled(MuiBox)>
          </NoContract>
        </AdminTabContainer>
        <mockConstructor>
          <div>
            <EnodeTabContainer
              isOpen={false}
            >
              <div />
            </EnodeTabContainer>
          </div>
        </mockConstructor>
      </div>
    </mockConstructor>
  </ToastProvider>
</Memo(Dashboard)>
`;

exports[`<Dashboard /> Dashboard ready tab=ENODE_TAB matches snapshot 1`] = `
<Memo(Dashboard)
  setTab={[Function]}
  tab="enodeTab"
>
  <Memo(TabSelector)
    setTab={[Function]}
    tab="enodeTab"
  >
    <WithStyles(ForwardRef(Grid))
      className="choicesContainer"
      container={true}
    >
      <ForwardRef(Grid)
        className="choicesContainer"
        classes={
          Object {
            "align-content-xs-center": "MuiGrid-align-content-xs-center",
            "align-content-xs-flex-end": "MuiGrid-align-content-xs-flex-end",
            "align-content-xs-flex-start": "MuiGrid-align-content-xs-flex-start",
            "align-content-xs-space-around": "MuiGrid-align-content-xs-space-around",
            "align-content-xs-space-between": "MuiGrid-align-content-xs-space-between",
            "align-items-xs-baseline": "MuiGrid-align-items-xs-baseline",
            "align-items-xs-center": "MuiGrid-align-items-xs-center",
            "align-items-xs-flex-end": "MuiGrid-align-items-xs-flex-end",
            "align-items-xs-flex-start": "MuiGrid-align-items-xs-flex-start",
            "container": "MuiGrid-container",
            "direction-xs-column": "MuiGrid-direction-xs-column",
            "direction-xs-column-reverse": "MuiGrid-direction-xs-column-reverse",
            "direction-xs-row-reverse": "MuiGrid-direction-xs-row-reverse",
            "grid-lg-1": "MuiGrid-grid-lg-1",
            "grid-lg-10": "MuiGrid-grid-lg-10",
            "grid-lg-11": "MuiGrid-grid-lg-11",
            "grid-lg-12": "MuiGrid-grid-lg-12",
            "grid-lg-2": "MuiGrid-grid-lg-2",
            "grid-lg-3": "MuiGrid-grid-lg-3",
            "grid-lg-4": "MuiGrid-grid-lg-4",
            "grid-lg-5": "MuiGrid-grid-lg-5",
            "grid-lg-6": "MuiGrid-grid-lg-6",
            "grid-lg-7": "MuiGrid-grid-lg-7",
            "grid-lg-8": "MuiGrid-grid-lg-8",
            "grid-lg-9": "MuiGrid-grid-lg-9",
            "grid-lg-auto": "MuiGrid-grid-lg-auto",
            "grid-lg-true": "MuiGrid-grid-lg-true",
            "grid-md-1": "MuiGrid-grid-md-1",
            "grid-md-10": "MuiGrid-grid-md-10",
            "grid-md-11": "MuiGrid-grid-md-11",
            "grid-md-12": "MuiGrid-grid-md-12",
            "grid-md-2": "MuiGrid-grid-md-2",
            "grid-md-3": "MuiGrid-grid-md-3",
            "grid-md-4": "MuiGrid-grid-md-4",
            "grid-md-5": "MuiGrid-grid-md-5",
            "grid-md-6": "MuiGrid-grid-md-6",
            "grid-md-7": "MuiGrid-grid-md-7",
            "grid-md-8": "MuiGrid-grid-md-8",
            "grid-md-9": "MuiGrid-grid-md-9",
            "grid-md-auto": "MuiGrid-grid-md-auto",
            "grid-md-true": "MuiGrid-grid-md-true",
            "grid-sm-1": "MuiGrid-grid-sm-1",
            "grid-sm-10": "MuiGrid-grid-sm-10",
            "grid-sm-11": "MuiGrid-grid-sm-11",
            "grid-sm-12": "MuiGrid-grid-sm-12",
            "grid-sm-2": "MuiGrid-grid-sm-2",
            "grid-sm-3": "MuiGrid-grid-sm-3",
            "grid-sm-4": "MuiGrid-grid-sm-4",
            "grid-sm-5": "MuiGrid-grid-sm-5",
            "grid-sm-6": "MuiGrid-grid-sm-6",
            "grid-sm-7": "MuiGrid-grid-sm-7",
            "grid-sm-8": "MuiGrid-grid-sm-8",
            "grid-sm-9": "MuiGrid-grid-sm-9",
            "grid-sm-auto": "MuiGrid-grid-sm-auto",
            "grid-sm-true": "MuiGrid-grid-sm-true",
            "grid-xl-1": "MuiGrid-grid-xl-1",
            "grid-xl-10": "MuiGrid-grid-xl-10",
            "grid-xl-11": "MuiGrid-grid-xl-11",
            "grid-xl-12": "MuiGrid-grid-xl-12",
            "grid-xl-2": "MuiGrid-grid-xl-2",
            "grid-xl-3": "MuiGrid-grid-xl-3",
            "grid-xl-4": "MuiGrid-grid-xl-4",
            "grid-xl-5": "MuiGrid-grid-xl-5",
            "grid-xl-6": "MuiGrid-grid-xl-6",
            "grid-xl-7": "MuiGrid-grid-xl-7",
            "grid-xl-8": "MuiGrid-grid-xl-8",
            "grid-xl-9": "MuiGrid-grid-xl-9",
            "grid-xl-auto": "MuiGrid-grid-xl-auto",
            "grid-xl-true": "MuiGrid-grid-xl-true",
            "grid-xs-1": "MuiGrid-grid-xs-1",
            "grid-xs-10": "MuiGrid-grid-xs-10",
            "grid-xs-11": "MuiGrid-grid-xs-11",
            "grid-xs-12": "MuiGrid-grid-xs-12",
            "grid-xs-2": "MuiGrid-grid-xs-2",
            "grid-xs-3": "MuiGrid-grid-xs-3",
            "grid-xs-4": "MuiGrid-grid-xs-4",
            "grid-xs-5": "MuiGrid-grid-xs-5",
            "grid-xs-6": "MuiGrid-grid-xs-6",
            "grid-xs-7": "MuiGrid-grid-xs-7",
            "grid-xs-8": "MuiGrid-grid-xs-8",
            "grid-xs-9": "MuiGrid-grid-xs-9",
            "grid-xs-auto": "MuiGrid-grid-xs-auto",
            "grid-xs-true": "MuiGrid-grid-xs-true",
            "item": "MuiGrid-item",
            "justify-content-xs-center": "MuiGrid-justify-content-xs-center",
            "justify-content-xs-flex-end": "MuiGrid-justify-content-xs-flex-end",
            "justify-content-xs-space-around": "MuiGrid-justify-content-xs-space-around",
            "justify-content-xs-space-between": "MuiGrid-justify-content-xs-space-between",
            "justify-content-xs-space-evenly": "MuiGrid-justify-content-xs-space-evenly",
            "root": "MuiGrid-root",
            "spacing-xs-1": "MuiGrid-spacing-xs-1",
            "spacing-xs-10": "MuiGrid-spacing-xs-10",
            "spacing-xs-2": "MuiGrid-spacing-xs-2",
            "spacing-xs-3": "MuiGrid-spacing-xs-3",
            "spacing-xs-4": "MuiGrid-spacing-xs-4",
            "spacing-xs-5": "MuiGrid-spacing-xs-5",
            "spacing-xs-6": "MuiGrid-spacing-xs-6",
            "spacing-xs-7": "MuiGrid-spacing-xs-7",
            "spacing-xs-8": "MuiGrid-spacing-xs-8",
            "spacing-xs-9": "MuiGrid-spacing-xs-9",
            "wrap-xs-nowrap": "MuiGrid-wrap-xs-nowrap",
            "wrap-xs-wrap-reverse": "MuiGrid-wrap-xs-wrap-reverse",
            "zeroMinWidth": "MuiGrid-zeroMinWidth",
          }
        }
        container={true}
      >
        <div
          className="MuiGrid-root choicesContainer MuiGrid-container"
        >
          <Styled(MuiBox)
            className="choiceBox"
            key="accountTab"
            onClick={[Function]}
            px={3}
            width="200px"
          >
            <div
              className="MuiBox-root MuiBox-root-57 choiceBox"
              onClick={[Function]}
            >
              <WithStyles(ForwardRef(Typography))
                variant="subtitle1"
              >
                <ForwardRef(Typography)
                  classes={
                    Object {
                      "alignCenter": "MuiTypography-alignCenter",
                      "alignJustify": "MuiTypography-alignJustify",
                      "alignLeft": "MuiTypography-alignLeft",
                      "alignRight": "MuiTypography-alignRight",
                      "body1": "MuiTypography-body1",
                      "body2": "MuiTypography-body2",
                      "button": "MuiTypography-button",
                      "caption": "MuiTypography-caption",
                      "colorError": "MuiTypography-colorError",
                      "colorInherit": "MuiTypography-colorInherit",
                      "colorPrimary": "MuiTypography-colorPrimary",
                      "colorSecondary": "MuiTypography-colorSecondary",
                      "colorTextPrimary": "MuiTypography-colorTextPrimary",
                      "colorTextSecondary": "MuiTypography-colorTextSecondary",
                      "displayBlock": "MuiTypography-displayBlock",
                      "displayInline": "MuiTypography-displayInline",
                      "gutterBottom": "MuiTypography-gutterBottom",
                      "h1": "MuiTypography-h1",
                      "h2": "MuiTypography-h2",
                      "h3": "MuiTypography-h3",
                      "h4": "MuiTypography-h4",
                      "h5": "MuiTypography-h5",
                      "h6": "MuiTypography-h6",
                      "noWrap": "MuiTypography-noWrap",
                      "overline": "MuiTypography-overline",
                      "paragraph": "MuiTypography-paragraph",
                      "root": "MuiTypography-root",
                      "srOnly": "MuiTypography-srOnly",
                      "subtitle1": "MuiTypography-subtitle1",
                      "subtitle2": "MuiTypography-subtitle2",
                    }
                  }
                  variant="subtitle1"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-subtitle1"
                  >
                    Accounts
                  </h6>
                </ForwardRef(Typography)>
              </WithStyles(ForwardRef(Typography))>
            </div>
          </Styled(MuiBox)>
          <Styled(MuiBox)
            className="selected choiceBox"
            key="enodeTab"
            onClick={[Function]}
            px={3}
            width="200px"
          >
            <div
              className="MuiBox-root MuiBox-root-58 selected choiceBox"
              onClick={[Function]}
            >
              <WithStyles(ForwardRef(Typography))
                variant="subtitle1"
              >
                <ForwardRef(Typography)
                  classes={
                    Object {
                      "alignCenter": "MuiTypography-alignCenter",
                      "alignJustify": "MuiTypography-alignJustify",
                      "alignLeft": "MuiTypography-alignLeft",
                      "alignRight": "MuiTypography-alignRight",
                      "body1": "MuiTypography-body1",
                      "body2": "MuiTypography-body2",
                      "button": "MuiTypography-button",
                      "caption": "MuiTypography-caption",
                      "colorError": "MuiTypography-colorError",
                      "colorInherit": "MuiTypography-colorInherit",
                      "colorPrimary": "MuiTypography-colorPrimary",
                      "colorSecondary": "MuiTypography-colorSecondary",
                      "colorTextPrimary": "MuiTypography-colorTextPrimary",
                      "colorTextSecondary": "MuiTypography-colorTextSecondary",
                      "displayBlock": "MuiTypography-displayBlock",
                      "displayInline": "MuiTypography-displayInline",
                      "gutterBottom": "MuiTypography-gutterBottom",
                      "h1": "MuiTypography-h1",
                      "h2": "MuiTypography-h2",
                      "h3": "MuiTypography-h3",
                      "h4": "MuiTypography-h4",
                      "h5": "MuiTypography-h5",
                      "h6": "MuiTypography-h6",
                      "noWrap": "MuiTypography-noWrap",
                      "overline": "MuiTypography-overline",
                      "paragraph": "MuiTypography-paragraph",
                      "root": "MuiTypography-root",
                      "srOnly": "MuiTypography-srOnly",
                      "subtitle1": "MuiTypography-subtitle1",
                      "subtitle2": "MuiTypography-subtitle2",
                    }
                  }
                  variant="subtitle1"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-subtitle1"
                  >
                    Nodes
                  </h6>
                </ForwardRef(Typography)>
              </WithStyles(ForwardRef(Typography))>
            </div>
          </Styled(MuiBox)>
          <Styled(MuiBox)
            className="choiceBox"
            key="adminTab"
            onClick={[Function]}
            px={3}
            width="200px"
          >
            <div
              className="MuiBox-root MuiBox-root-59 choiceBox"
              onClick={[Function]}
            >
              <WithStyles(ForwardRef(Typography))
                variant="subtitle1"
              >
                <ForwardRef(Typography)
                  classes={
                    Object {
                      "alignCenter": "MuiTypography-alignCenter",
                      "alignJustify": "MuiTypography-alignJustify",
                      "alignLeft": "MuiTypography-alignLeft",
                      "alignRight": "MuiTypography-alignRight",
                      "body1": "MuiTypography-body1",
                      "body2": "MuiTypography-body2",
                      "button": "MuiTypography-button",
                      "caption": "MuiTypography-caption",
                      "colorError": "MuiTypography-colorError",
                      "colorInherit": "MuiTypography-colorInherit",
                      "colorPrimary": "MuiTypography-colorPrimary",
                      "colorSecondary": "MuiTypography-colorSecondary",
                      "colorTextPrimary": "MuiTypography-colorTextPrimary",
                      "colorTextSecondary": "MuiTypography-colorTextSecondary",
                      "displayBlock": "MuiTypography-displayBlock",
                      "displayInline": "MuiTypography-displayInline",
                      "gutterBottom": "MuiTypography-gutterBottom",
                      "h1": "MuiTypography-h1",
                      "h2": "MuiTypography-h2",
                      "h3": "MuiTypography-h3",
                      "h4": "MuiTypography-h4",
                      "h5": "MuiTypography-h5",
                      "h6": "MuiTypography-h6",
                      "noWrap": "MuiTypography-noWrap",
                      "overline": "MuiTypography-overline",
                      "paragraph": "MuiTypography-paragraph",
                      "root": "MuiTypography-root",
                      "srOnly": "MuiTypography-srOnly",
                      "subtitle1": "MuiTypography-subtitle1",
                      "subtitle2": "MuiTypography-subtitle2",
                    }
                  }
                  variant="subtitle1"
                >
                  <h6
                    className="MuiTypography-root MuiTypography-subtitle1"
                  >
                    Admins
                  </h6>
                </ForwardRef(Typography)>
              </WithStyles(ForwardRef(Typography))>
            </div>
          </Styled(MuiBox)>
        </div>
      </ForwardRef(Grid)>
    </WithStyles(ForwardRef(Grid))>
  </Memo(TabSelector)>
  <ToastProvider>
    <ToastsContainer>
      <Memo(Toasts)
        closeToast={[Function]}
        toasts={Array []}
      >
        <WithStyles(ForwardRef(Grid))>
          <ForwardRef(Grid)
            classes={
              Object {
                "align-content-xs-center": "MuiGrid-align-content-xs-center",
                "align-content-xs-flex-end": "MuiGrid-align-content-xs-flex-end",
                "align-content-xs-flex-start": "MuiGrid-align-content-xs-flex-start",
                "align-content-xs-space-around": "MuiGrid-align-content-xs-space-around",
                "align-content-xs-space-between": "MuiGrid-align-content-xs-space-between",
                "align-items-xs-baseline": "MuiGrid-align-items-xs-baseline",
                "align-items-xs-center": "MuiGrid-align-items-xs-center",
                "align-items-xs-flex-end": "MuiGrid-align-items-xs-flex-end",
                "align-items-xs-flex-start": "MuiGrid-align-items-xs-flex-start",
                "container": "MuiGrid-container",
                "direction-xs-column": "MuiGrid-direction-xs-column",
                "direction-xs-column-reverse": "MuiGrid-direction-xs-column-reverse",
                "direction-xs-row-reverse": "MuiGrid-direction-xs-row-reverse",
                "grid-lg-1": "MuiGrid-grid-lg-1",
                "grid-lg-10": "MuiGrid-grid-lg-10",
                "grid-lg-11": "MuiGrid-grid-lg-11",
                "grid-lg-12": "MuiGrid-grid-lg-12",
                "grid-lg-2": "MuiGrid-grid-lg-2",
                "grid-lg-3": "MuiGrid-grid-lg-3",
                "grid-lg-4": "MuiGrid-grid-lg-4",
                "grid-lg-5": "MuiGrid-grid-lg-5",
                "grid-lg-6": "MuiGrid-grid-lg-6",
                "grid-lg-7": "MuiGrid-grid-lg-7",
                "grid-lg-8": "MuiGrid-grid-lg-8",
                "grid-lg-9": "MuiGrid-grid-lg-9",
                "grid-lg-auto": "MuiGrid-grid-lg-auto",
                "grid-lg-true": "MuiGrid-grid-lg-true",
                "grid-md-1": "MuiGrid-grid-md-1",
                "grid-md-10": "MuiGrid-grid-md-10",
                "grid-md-11": "MuiGrid-grid-md-11",
                "grid-md-12": "MuiGrid-grid-md-12",
                "grid-md-2": "MuiGrid-grid-md-2",
                "grid-md-3": "MuiGrid-grid-md-3",
                "grid-md-4": "MuiGrid-grid-md-4",
                "grid-md-5": "MuiGrid-grid-md-5",
                "grid-md-6": "MuiGrid-grid-md-6",
                "grid-md-7": "MuiGrid-grid-md-7",
                "grid-md-8": "MuiGrid-grid-md-8",
                "grid-md-9": "MuiGrid-grid-md-9",
                "grid-md-auto": "MuiGrid-grid-md-auto",
                "grid-md-true": "MuiGrid-grid-md-true",
                "grid-sm-1": "MuiGrid-grid-sm-1",
                "grid-sm-10": "MuiGrid-grid-sm-10",
                "grid-sm-11": "MuiGrid-grid-sm-11",
                "grid-sm-12": "MuiGrid-grid-sm-12",
                "grid-sm-2": "MuiGrid-grid-sm-2",
                "grid-sm-3": "MuiGrid-grid-sm-3",
                "grid-sm-4": "MuiGrid-grid-sm-4",
                "grid-sm-5": "MuiGrid-grid-sm-5",
                "grid-sm-6": "MuiGrid-grid-sm-6",
                "grid-sm-7": "MuiGrid-grid-sm-7",
                "grid-sm-8": "MuiGrid-grid-sm-8",
                "grid-sm-9": "MuiGrid-grid-sm-9",
                "grid-sm-auto": "MuiGrid-grid-sm-auto",
                "grid-sm-true": "MuiGrid-grid-sm-true",
                "grid-xl-1": "MuiGrid-grid-xl-1",
                "grid-xl-10": "MuiGrid-grid-xl-10",
                "grid-xl-11": "MuiGrid-grid-xl-11",
                "grid-xl-12": "MuiGrid-grid-xl-12",
                "grid-xl-2": "MuiGrid-grid-xl-2",
                "grid-xl-3": "MuiGrid-grid-xl-3",
                "grid-xl-4": "MuiGrid-grid-xl-4",
                "grid-xl-5": "MuiGrid-grid-xl-5",
                "grid-xl-6": "MuiGrid-grid-xl-6",
                "grid-xl-7": "MuiGrid-grid-xl-7",
                "grid-xl-8": "MuiGrid-grid-xl-8",
                "grid-xl-9": "MuiGrid-grid-xl-9",
                "grid-xl-auto": "MuiGrid-grid-xl-auto",
                "grid-xl-true": "MuiGrid-grid-xl-true",
                "grid-xs-1": "MuiGrid-grid-xs-1",
                "grid-xs-10": "MuiGrid-grid-xs-10",
                "grid-xs-11": "MuiGrid-grid-xs-11",
                "grid-xs-12": "MuiGrid-grid-xs-12",
                "grid-xs-2": "MuiGrid-grid-xs-2",
                "grid-xs-3": "MuiGrid-grid-xs-3",
                "grid-xs-4": "MuiGrid-grid-xs-4",
                "grid-xs-5": "MuiGrid-grid-xs-5",
                "grid-xs-6": "MuiGrid-grid-xs-6",
                "grid-xs-7": "MuiGrid-grid-xs-7",
                "grid-xs-8": "MuiGrid-grid-xs-8",
                "grid-xs-9": "MuiGrid-grid-xs-9",
                "grid-xs-auto": "MuiGrid-grid-xs-auto",
                "grid-xs-true": "MuiGrid-grid-xs-true",
                "item": "MuiGrid-item",
                "justify-content-xs-center": "MuiGrid-justify-content-xs-center",
                "justify-content-xs-flex-end": "MuiGrid-justify-content-xs-flex-end",
                "justify-content-xs-space-around": "MuiGrid-justify-content-xs-space-around",
                "justify-content-xs-space-between": "MuiGrid-justify-content-xs-space-between",
                "justify-content-xs-space-evenly": "MuiGrid-justify-content-xs-space-evenly",
                "root": "MuiGrid-root",
                "spacing-xs-1": "MuiGrid-spacing-xs-1",
                "spacing-xs-10": "MuiGrid-spacing-xs-10",
                "spacing-xs-2": "MuiGrid-spacing-xs-2",
                "spacing-xs-3": "MuiGrid-spacing-xs-3",
                "spacing-xs-4": "MuiGrid-spacing-xs-4",
                "spacing-xs-5": "MuiGrid-spacing-xs-5",
                "spacing-xs-6": "MuiGrid-spacing-xs-6",
                "spacing-xs-7": "MuiGrid-spacing-xs-7",
                "spacing-xs-8": "MuiGrid-spacing-xs-8",
                "spacing-xs-9": "MuiGrid-spacing-xs-9",
                "wrap-xs-nowrap": "MuiGrid-wrap-xs-nowrap",
                "wrap-xs-wrap-reverse": "MuiGrid-wrap-xs-wrap-reverse",
                "zeroMinWidth": "MuiGrid-zeroMinWidth",
              }
            }
          >
            <div
              className="MuiGrid-root"
            />
          </ForwardRef(Grid)>
        </WithStyles(ForwardRef(Grid))>
      </Memo(Toasts)>
    </ToastsContainer>
    <mockConstructor>
      <div>
        <mockConstructor>
          <div>
            <AccountTabContainer
              isOpen={false}
            >
              <div />
            </AccountTabContainer>
          </div>
        </mockConstructor>
        <AdminTabContainer
          isOpen={false}
        >
          <div />
        </AdminTabContainer>
        <mockConstructor>
          <div>
            <EnodeTabContainer
              isOpen={true}
            >
              <NoContract
                tabName="Node Rules"
              >
                <Styled(MuiBox)>
                  <div
                    className="MuiBox-root MuiBox-root-60"
                  >
                    <WithStyles(ForwardRef(Grid))
                      alignItems="center"
                      container={true}
                    >
                      <ForwardRef(Grid)
                        alignItems="center"
                        classes={
                          Object {
                            "align-content-xs-center": "MuiGrid-align-content-xs-center",
                            "align-content-xs-flex-end": "MuiGrid-align-content-xs-flex-end",
                            "align-content-xs-flex-start": "MuiGrid-align-content-xs-flex-start",
                            "align-content-xs-space-around": "MuiGrid-align-content-xs-space-around",
                            "align-content-xs-space-between": "MuiGrid-align-content-xs-space-between",
                            "align-items-xs-baseline": "MuiGrid-align-items-xs-baseline",
                            "align-items-xs-center": "MuiGrid-align-items-xs-center",
                            "align-items-xs-flex-end": "MuiGrid-align-items-xs-flex-end",
                            "align-items-xs-flex-start": "MuiGrid-align-items-xs-flex-start",
                            "container": "MuiGrid-container",
                            "direction-xs-column": "MuiGrid-direction-xs-column",
                            "direction-xs-column-reverse": "MuiGrid-direction-xs-column-reverse",
                            "direction-xs-row-reverse": "MuiGrid-direction-xs-row-reverse",
                            "grid-lg-1": "MuiGrid-grid-lg-1",
                            "grid-lg-10": "MuiGrid-grid-lg-10",
                            "grid-lg-11": "MuiGrid-grid-lg-11",
                            "grid-lg-12": "MuiGrid-grid-lg-12",
                            "grid-lg-2": "MuiGrid-grid-lg-2",
                            "grid-lg-3": "MuiGrid-grid-lg-3",
                            "grid-lg-4": "MuiGrid-grid-lg-4",
                            "grid-lg-5": "MuiGrid-grid-lg-5",
                            "grid-lg-6": "MuiGrid-grid-lg-6",
                            "grid-lg-7": "MuiGrid-grid-lg-7",
                            "grid-lg-8": "MuiGrid-grid-lg-8",
                            "grid-lg-9": "MuiGrid-grid-lg-9",
                            "grid-lg-auto": "MuiGrid-grid-lg-auto",
                            "grid-lg-true": "MuiGrid-grid-lg-true",
                            "grid-md-1": "MuiGrid-grid-md-1",
                            "grid-md-10": "MuiGrid-grid-md-10",
                            "grid-md-11": "MuiGrid-grid-md-11",
                            "grid-md-12": "MuiGrid-grid-md-12",
                            "grid-md-2": "MuiGrid-grid-md-2",
                            "grid-md-3": "MuiGrid-grid-md-3",
                            "grid-md-4": "MuiGrid-grid-md-4",
                            "grid-md-5": "MuiGrid-grid-md-5",
                            "grid-md-6": "MuiGrid-grid-md-6",
                            "grid-md-7": "MuiGrid-grid-md-7",
                            "grid-md-8": "MuiGrid-grid-md-8",
                            "grid-md-9": "MuiGrid-grid-md-9",
                            "grid-md-auto": "MuiGrid-grid-md-auto",
                            "grid-md-true": "MuiGrid-grid-md-true",
                            "grid-sm-1": "MuiGrid-grid-sm-1",
                            "grid-sm-10": "MuiGrid-grid-sm-10",
                            "grid-sm-11": "MuiGrid-grid-sm-11",
                            "grid-sm-12": "MuiGrid-grid-sm-12",
                            "grid-sm-2": "MuiGrid-grid-sm-2",
                            "grid-sm-3": "MuiGrid-grid-sm-3",
                            "grid-sm-4": "MuiGrid-grid-sm-4",
                            "grid-sm-5": "MuiGrid-grid-sm-5",
                            "grid-sm-6": "MuiGrid-grid-sm-6",
                            "grid-sm-7": "MuiGrid-grid-sm-7",
                            "grid-sm-8": "MuiGrid-grid-sm-8",
                            "grid-sm-9": "MuiGrid-grid-sm-9",
                            "grid-sm-auto": "MuiGrid-grid-sm-auto",
                            "grid-sm-true": "MuiGrid-grid-sm-true",
                            "grid-xl-1": "MuiGrid-grid-xl-1",
                            "grid-xl-10": "MuiGrid-grid-xl-10",
                            "grid-xl-11": "MuiGrid-grid-xl-11",
                            "grid-xl-12": "MuiGrid-grid-xl-12",
                            "grid-xl-2": "MuiGrid-grid-xl-2",
                            "grid-xl-3": "MuiGrid-grid-xl-3",
                            "grid-xl-4": "MuiGrid-grid-xl-4",
                            "grid-xl-5": "MuiGrid-grid-xl-5",
                            "grid-xl-6": "MuiGrid-grid-xl-6",
                            "grid-xl-7": "MuiGrid-grid-xl-7",
                            "grid-xl-8": "MuiGrid-grid-xl-8",
                            "grid-xl-9": "MuiGrid-grid-xl-9",
                            "grid-xl-auto": "MuiGrid-grid-xl-auto",
                            "grid-xl-true": "MuiGrid-grid-xl-true",
                            "grid-xs-1": "MuiGrid-grid-xs-1",
                            "grid-xs-10": "MuiGrid-grid-xs-10",
                            "grid-xs-11": "MuiGrid-grid-xs-11",
                            "grid-xs-12": "MuiGrid-grid-xs-12",
                            "grid-xs-2": "MuiGrid-grid-xs-2",
                            "grid-xs-3": "MuiGrid-grid-xs-3",
                            "grid-xs-4": "MuiGrid-grid-xs-4",
                            "grid-xs-5": "MuiGrid-grid-xs-5",
                            "grid-xs-6": "MuiGrid-grid-xs-6",
                            "grid-xs-7": "MuiGrid-grid-xs-7",
                            "grid-xs-8": "MuiGrid-grid-xs-8",
                            "grid-xs-9": "MuiGrid-grid-xs-9",
                            "grid-xs-auto": "MuiGrid-grid-xs-auto",
                            "grid-xs-true": "MuiGrid-grid-xs-true",
                            "item": "MuiGrid-item",
                            "justify-content-xs-center": "MuiGrid-justify-content-xs-center",
                            "justify-content-xs-flex-end": "MuiGrid-justify-content-xs-flex-end",
                            "justify-content-xs-space-around": "MuiGrid-justify-content-xs-space-around",
                            "justify-content-xs-space-between": "MuiGrid-justify-content-xs-space-between",
                            "justify-content-xs-space-evenly": "MuiGrid-justify-content-xs-space-evenly",
                            "root": "MuiGrid-root",
                            "spacing-xs-1": "MuiGrid-spacing-xs-1",
                            "spacing-xs-10": "MuiGrid-spacing-xs-10",
                            "spacing-xs-2": "MuiGrid-spacing-xs-2",
                            "spacing-xs-3": "MuiGrid-spacing-xs-3",
                            "spacing-xs-4": "MuiGrid-spacing-xs-4",
                            "spacing-xs-5": "MuiGrid-spacing-xs-5",
                            "spacing-xs-6": "MuiGrid-spacing-xs-6",
                            "spacing-xs-7": "MuiGrid-spacing-xs-7",
                            "spacing-xs-8": "MuiGrid-spacing-xs-8",
                            "spacing-xs-9": "MuiGrid-spacing-xs-9",
                            "wrap-xs-nowrap": "MuiGrid-wrap-xs-nowrap",
                            "wrap-xs-wrap-reverse": "MuiGrid-wrap-xs-wrap-reverse",
                            "zeroMinWidth": "MuiGrid-zeroMinWidth",
                          }
                        }
                        container={true}
                      >
                        <div
                          className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
                        >
                          <ForwardRef(WarningIcon)>
                            <WithStyles(ForwardRef(SvgIcon))>
                              <ForwardRef(SvgIcon)
                                classes={
                                  Object {
                                    "colorAction": "MuiSvgIcon-colorAction",
                                    "colorDisabled": "MuiSvgIcon-colorDisabled",
                                    "colorError": "MuiSvgIcon-colorError",
                                    "colorPrimary": "MuiSvgIcon-colorPrimary",
                                    "colorSecondary": "MuiSvgIcon-colorSecondary",
                                    "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                    "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                    "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                    "root": "MuiSvgIcon-root",
                                  }
                                }
                              >
                                <svg
                                  aria-hidden={true}
                                  className="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                                  />
                                </svg>
                              </ForwardRef(SvgIcon)>
                            </WithStyles(ForwardRef(SvgIcon))>
                          </ForwardRef(WarningIcon)>
                          <WithStyles(ForwardRef(Typography))
                            color="error"
                            variant="body1"
                          >
                            <ForwardRef(Typography)
                              classes={
                                Object {
                                  "alignCenter": "MuiTypography-alignCenter",
                                  "alignJustify": "MuiTypography-alignJustify",
                                  "alignLeft": "MuiTypography-alignLeft",
                                  "alignRight": "MuiTypography-alignRight",
                                  "body1": "MuiTypography-body1",
                                  "body2": "MuiTypography-body2",
                                  "button": "MuiTypography-button",
                                  "caption": "MuiTypography-caption",
                                  "colorError": "MuiTypography-colorError",
                                  "colorInherit": "MuiTypography-colorInherit",
                                  "colorPrimary": "MuiTypography-colorPrimary",
                                  "colorSecondary": "MuiTypography-colorSecondary",
                                  "colorTextPrimary": "MuiTypography-colorTextPrimary",
                                  "colorTextSecondary": "MuiTypography-colorTextSecondary",
                                  "displayBlock": "MuiTypography-displayBlock",
                                  "displayInline": "MuiTypography-displayInline",
                                  "gutterBottom": "MuiTypography-gutterBottom",
                                  "h1": "MuiTypography-h1",
                                  "h2": "MuiTypography-h2",
                                  "h3": "MuiTypography-h3",
                                  "h4": "MuiTypography-h4",
                                  "h5": "MuiTypography-h5",
                                  "h6": "MuiTypography-h6",
                                  "noWrap": "MuiTypography-noWrap",
                                  "overline": "MuiTypography-overline",
                                  "paragraph": "MuiTypography-paragraph",
                                  "root": "MuiTypography-root",
                                  "srOnly": "MuiTypography-srOnly",
                                  "subtitle1": "MuiTypography-subtitle1",
                                  "subtitle2": "MuiTypography-subtitle2",
                                }
                              }
                              color="error"
                              variant="body1"
                            >
                              <p
                                className="MuiTypography-root MuiTypography-body1 MuiTypography-colorError"
                              >
                                Unable to locate 
                                Node Rules
                                 contract. Please review the Dapp configuration and confirm that the contract is correctly deployed.
                              </p>
                            </ForwardRef(Typography)>
                          </WithStyles(ForwardRef(Typography))>
                        </div>
                      </ForwardRef(Grid)>
                    </WithStyles(ForwardRef(Grid))>
                  </div>
                </Styled(MuiBox)>
              </NoContract>
            </EnodeTabContainer>
          </div>
        </mockConstructor>
      </div>
    </mockConstructor>
  </ToastProvider>
</Memo(Dashboard)>
`;
